[package]
name = "tiny_chatgpt_cli"
version = "1.0.0"
edition = "2021"
description = "A small tool to access ChatGPT from the command line"
license = "MIT"

[[bin]]
name = "chatgpt"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
home = "0.5.4"
reqwest = { version = "0.11.15", features = ["json", "blocking"] }
serde_json = "1.0.94"
