[package]
name = "tiny_chatgpt_cli"
version = "1.1.1"
edition = "2021"
description = "A small tool to access ChatGPT from the command line"
license = "MIT"
author = "megahomyak"

[[bin]]
name = "chatgpt"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.13", features = ["derive"] }
home = "0.5.4"
os_info = "3.7.0"
reqwest = { version = "0.11.15", features = ["json", "blocking"] }
serde_json = "1.0.94"
subprocess = "0.2.9"
